# Learning-Rust-through-Projects

./: .gitignore  README.md  Vagrantfile  update_readme.sh
CrypText/: Cargo.toml  README.md
CrypText/src/: lib.rs  main.rs
MetaSpy/: Cargo.toml
MetaSpy/samples/: test.jpg_original
MetaSpy/src/: main.rs  scanner.rs
Task_Manager/: Cargo.toml
Task_Manager/src/: main.rs
Temperature_converter/: Cargo.toml
Temperature_converter/src/: main.rs
UrlSniper/: Cargo.toml  urls.txt
UrlSniper/data/: suspicious_keywords.txt  suspicious_tlds.txt
UrlSniper/src/: main.rs
authwall/: Cargo.toml  admin_config.json  users.json
authwall/src/: admin.rs  auth.rs  crypto.rs  main.rs  password_input.rs  user.rs  userdb.rs
file_hasher/: Cargo.toml  hashes.txt  sample.txt
file_hasher/src/: main.rs
guessing_game/src/: main.rs
krypton/: Cargo.toml  build.rs  cryptlink_admin.json  cryptlink_users.json
krypton/src/: admin.rs  auth.rs  config.rs  crypto.rs  embedded_constants.rs  main.rs  protocol.rs  tun.rs
packetspy/: Cargo.toml
packetspy/src/: main.rs
passvault/: Cargo.toml
passvault/src/: cli.rs  crypto.rs  main.rs  vault.rs
password_prophet/: Cargo.toml
password_prophet/src/: main.rs
warpwire/: Cargo.toml
warpwire/src/: config.rs  main.rs  net.rs  tun.rs
word_frequency_counter/src/: main.rs
