[package]
name = "MetaSpy"
version = "0.1.0"
edition = "2024"
description = "MetaSpy – Scan file metadata for privacy and security."
authors = ["Nitish Patil <nitishp1929@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.0"
rexif = "0.7.5"
lopdf = "0.31.0"
walkdir = "2.5.0"
tempfile = "3.10.1"
colored = "2.1"