[package]
name = "authwall"
version = "1.0.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
password-hash = "0.5"
rpassword = "7.0"
