[package]
name = "krypton"
version = "1.0.0"
edition = "2024"
authors = ["Nitish Patil"]
description = "Authenticated P2P VPN with built-in key exchange (Windows & Linux)"
build = "build.rs"

[dependencies]
# Core networking (cross-platform)
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

# CLI parsing 
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto dependencies 
aes-gcm = { version = "0.10"}
x25519-dalek = "2.0"
rand_core = { version = "0.6", features = ["std"]}
sha2 = "0.10"
hex = "0.4"
base64="0.22"

# Auth dependencies 
argon2 = "0.5"
password-hash = "0.5"
uuid = { version = "1.0", features = ["v4"]}
rpassword = "7.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
ring = "0.17.14"

# Platform-specific TUN interfaces
[target.'cfg(windows)'.dependencies]
wintun = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
tun = "0.6"
nix = "0.27"

[build-dependencies]
# For downloading WinTUN DLL automatically (optional)
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.0"
atty = "0.2"
libc = "0.2"
[target.'cfg(unix)'.build-dependencies]
libc = "0.2"
[features]
default = []
