[package]
name = "passvault"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"  
rand = "0.8"
zeroize = "1.6"  
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
aes = "0.8"
sha2 = "0.10"
rpassword = "7.2.0"
